--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -6,7 +6,36 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h1>Burger</h1>
+    <a href="../index.html"><h1>Home</h1></a>
+    <h1>Burger Patties</h1>
+    <img src="../img/burger.jpg" alt="burger" width="500" height="500">
+    <h2>Description</h2>
+
+    <p>Burger patties that you can use for anything!</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>1 large egg</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1 pound ground beef</li>
+        <li>1/2 cup fine dry bread crumbs</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
+        <li>Whisk egg, salt, and pepper together in a medium bowl.</li>
+        <img src="../img/bowl.jpg" alt="bowl of grease" width="500" height="500">
+        <li>Add ground beef and bread crumbs; mix with your hands or a fork until well blended.</li>
+        <img src="../img/beefbowl.jpg" alt="bowl of raw beef" width="500" height="500">
+        <li>Form into four 3/4-inch-thick patties.</li>
+        <img src="../img/tray.jpg" alt="tray with raw burgers" width="500" height="500">
+        <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
+        <img src="../img/cooked.jpg" alt="tray with cooked burgers" width="500" height="500">
+        <li>Serve hot and enjoy!</li>
+        <img src="../img/assemble.jpg" alt="burger" width="500" height="500">
+    </ol>
 </body>
 </html>
